# plc-compiler

./: Cargo.toml  README.md  notes.md
src/: main.rs  parser.rs
src/parser/: ast.rs  mod.rs  tests.rs  tokens.rs
src/parser/ast/: case.rs  expression.rs  mod.rs  numeric.rs  statement.rs  time.rs  variable.rs
src/parser/tests/: statement.rs  variable.rs
