[package]
name = "plc-compiler"
description = "plc compiler for plc-st on top on the cranelift"
authors = ["BorisZhguchev <zhguchev@gmail.com>"]
license-file = "LICENSE"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/besok/cran_lua"
repository = "https://github.com/besok/cran_lua"
readme = "README.md"
keywords = ["plc", "cranelift", "frontend", "language","compiler"]
categories = ["api-bindings", "compilers", "parsing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


parsit = "0.1.12"
#parsit = {path = "../parseit"}
logos = "0.12.1"